<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/movie_poster_iv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_height"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_description"
            android:scaleType="fitXY"
            tools:src="@drawable/sample_poster" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/movie_title_tv"
                style="@style/TextStyle"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="@string/sample_original_title" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp65"
                android:layout_marginStart="@dimen/dp65"
                android:contentDescription="@string/image_description"
                android:paddingTop="@dimen/padding_5"
                android:src="@drawable/ic_sharp_favorite_24px" />

            <TextView
                android:id="@+id/rating_tv"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp50"
                android:layout_marginRight="@dimen/dp50"
                tools:text="@string/sample_vote_average" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_date" />

            <TextView
                android:id="@+id/date_tv"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                tools:text="@string/sample_release_date" />

        </LinearLayout>

        <TextView
            android:id="@+id/overview_tv"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            tools:text="@string/sample_overView" />


    </LinearLayout>
</ScrollView>
